--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -8,12 +8,17 @@
   <div class="ui dropdown item">
     Account <i class="dropdown icon"></i>
     <div class="menu">
-      <a class="item">Log out</a>
-      <a class="item">Log in</a>
-      <a class="item">Sign up</a>
+      <% if logged_in? %>
+        <%= link_to "Logout", logout_path, method: :delete, class: "item" %>
+      <% else %>
+        <%= link_to "Login", login_path, class: "item" %>
+<!--        <a class="item">Signup</a>-->
+      <% end %>
     </div>
   </div>
-  <div class="item">
-    <div class="ui primary button">Sign Up</div>
-  </div>
+  <% if !logged_in? %>
+    <div class="item">
+      <%= link_to "Login", login_path, class: "ui primary button" %>
+    </div>
+  <% end %>
 </div>
